<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mari\'s Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="amount_label">Amount:</string>
    <string name="tip_label">Tip is</string>
    <string name="button_10_percent_label">10%</string>
    <string name="button_15_percent_label">15%</string>
    <string name="button_20_percent_label">20%</string>
    <string name="enter_amount_hint">Enter Amount</string>
    <string name="no_tip_percent">0%</string>

</resources>
