<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:text="@string/amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/amountTextView"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/amountTextView"
        android:ems="10"
        android:hint="@string/enter_amount_hint"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amountTextView"
        android:layout_below="@+id/amountTextView"
        android:layout_marginTop="51dp"
        android:text="@string/tip_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tipValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipTextView"
        android:layout_alignBottom="@+id/tipTextView"
        android:layout_alignLeft="@+id/amountEditText"
        android:text="0.00"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tipPerCentSeekBar"
        android:layout_below="@+id/tipPerCentSeekBar"
        android:layout_marginTop="53dp"
        android:onClick="on10PercentClick"
        android:text="@string/button_10_percent_label" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button10"
        android:layout_centerHorizontal="true"
        android:onClick="on15PercentClick"
        android:text="@string/button_15_percent_label" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button15"
        android:layout_alignBottom="@+id/button15"
        android:layout_alignRight="@+id/tipPerCentSeekBar"
        android:onClick="on20PercentClick"
        android:text="@string/button_20_percent_label" />

    <SeekBar
        android:id="@+id/tipPerCentSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/tipPercentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tipPerCentSeekBar"
        android:layout_toRightOf="@+id/tipValueTextView"
        android:text="@string/no_tip_percent"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
